# mcp-tool-forge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: check-doc-sync.sh
.claude/skills/aws-ai/: SKILL.md
.claude/skills/aws-messaging/: SKILL.md
.claude/skills/aws-network/: SKILL.md
.claude/skills/aws-security/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/sync-docs/: SKILL.md
.kiro/: AGENT.md
.kiro/settings/: steering.md
.kiro/skills/aws-cloudwatch/: SKILL.md
.kiro/skills/aws-cost/: SKILL.md
.kiro/skills/aws-data/: SKILL.md
.kiro/skills/aws-iam/: SKILL.md
.kiro/skills/aws-infra/: SKILL.md
.kiro/skills/code-review/: SKILL.md
.kiro/skills/refactor/: SKILL.md
.kiro/skills/sync-docs/: SKILL.md
docs/: architecture.md
docs/decisions/: .template.md
docs/plans/: 2026-03-08-mcp-to-cli-design.md  2026-03-08-mcp-to-cli-implementation.md
docs/runbooks/: .template.md
scripts/: compare.py  debug_sonnet.py  run_remaining.py  run_sonnet46.py
src/mcp_to_cli/: __init__.py  __main__.py  cache.py  cli.py  connector.py  llm_mapper.py  mapping_loader.py  models.py  parser.py  pipeline.py  registry.py  registry.yaml  skill_registrar.py  validator.py
tests/: __init__.py  test_agentcore_gen.py  test_cache.py  test_cli.py  test_connector.py  test_generators.py  test_llm_mapper.py  test_mapping_loader.py  test_models.py  test_parser.py  test_pipeline.py  test_registry.py  test_skill_registrar.py
(+960 files in other folders)
