[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-to-cli"
version = "0.1.0"
description = "Convert MCP server tools to boto3/CLI/schema/skill outputs"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "boto3>=1.35.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "anthropic>=0.40.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
mcp-to-cli = "mcp_to_cli.cli:main"
